<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/restart_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_restart_alert"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/button_restart_okay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/okay_button"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/colorPrimaryDark"
        android:contentDescription="@string/okay_hidden"/>

</LinearLayout>
